Mon Feb 23 19:25:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_sys_socket.h:
          Doxygen changes

Mon Feb 23 13:11:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks5.x.h:
        * ace/config-vxworks6.2.h:
        * ace/config-vxworks6.3.h:
          Removed, these VxWorks versions aren't maintained anymore

        * ace/config-vxworks.h:
          Updated

Mon Feb 23 08:16:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/global.features
          Layout changes

        * bin/PerlACE/ProcessVX_Unix.pm
          Improved quote handling

        * debianbuild/dsc:
          New file

        * ace/Activation_Queue.cpp
        * ace/ATM_Addr.cpp
        * ace/ATM_Connector.inl
        * ace/Configuration_Import_Export.cpp
        * ace/Dynamic_Message_Strategy.cpp
        * ace/Future.cpp
        * ace/Message_Queue_T.cpp
        * ace/Naming_Context.cpp
        * ace/POSIX_Asynch_IO.cpp
        * ace/QoS/QoS_Session_Impl.cpp
        * ace/Timer_Heap_T.cpp
        * ace/Timer_Wheel_T.cpp
        * ace/TP_Reactor.cpp
        * ace/WIN32_Asynch_IO.cpp
        * ACEXML/examples/SAXPrint/main.cpp
        * apps/gperf/src/Options.cpp
        * apps/JAWS/server/HTTP_Handler.cpp
        * apps/mkcsregdb/mkcsregdb.cpp
        * ASNMP/examples/get/get.cpp
        * ASNMP/examples/get/get_async.cpp
        * ASNMP/examples/next/next.cpp
        * ASNMP/examples/set/set.cpp
        * ASNMP/examples/trap/trap.cpp
        * ASNMP/examples/walk/walk.cpp
        * examples/APG/Containers/DLList.cpp
        * examples/APG/Containers/Hash_Map.cpp
        * examples/APG/Containers/Hash_Map_Hash.cpp
        * examples/APG/Containers/Map_Manager.cpp
        * examples/APG/Containers/Map_Manager_Specialization.cpp
        * examples/APG/Containers/RB_Tree.cpp
        * examples/APG/Containers/RB_Tree_Functors.cpp
        * examples/APG/ThreadManagement/Coop_Cancel.cpp