@@ -1,3 +1,8 @@
+Mon Feb 23 19:34:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/generate_compile_stats.sh:
+          Use mkdir -p
+
 Mon Feb 23 19:25:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/OS_NS_sys_socket.h:
